added components, the logic of redux and some functionality

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,136 @@
 @import-normalize;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #ff00ff;
+  color: #ffffff;
+  font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.section {
+  padding: 25px 15px;
+  margin: 0 auto;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.label {
+  position: absolute;
+  left: 30px;
+  font-style: italic;
+  color: blanchedalmond;
+  transition: all 0.3s linear;
+}
+.label:not(:last-child) {
+  margin-bottom: 20px;
+}
+.input {
+  background-color: transparent;
+  border: none;
+  border-radius: 10px;
+  border-bottom: salmon 1px solid;
+  width: 200px;
+  outline: none;
+  color: #ffffff;
+  padding-left: 25px;
+  padding-bottom: 10px;
+  color: blanchedalmond;
+  font-size: 16px;
+  font-style: italic;
+}
+.input::placeholder {
+  color: blanchedalmond;
+  padding-left: 1px;
+  transition: all 0.3s linear;
+}
+
+.input:focus.input::placeholder {
+  padding-left: 330px;
+}
+.labelRight {
+  left: 330px;
+  position: absolute;
+  font-style: italic;
+  color: blanchedalmond;
+  transition: all 0.3s linear;
+}
+
+.inputWrapper {
+  position: relative;
+}
+.inputWrapper:not(:last-child) {
+  margin-bottom: 40px;
+}
+.button {
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  background: rgb(255, 176, 60);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 176, 60, 1) 39%,
+    rgba(250, 128, 114, 1) 100%
+  );
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .input {
+    width: 500px;
+  }
 }
